[package]
name = "bumpkey"
version = "0.1.0"
authors = [
  "Brandon Weeks <bweeks@google.com",
  "Eric Chiang <ericchiang@google.com>",
  "Tom D'Netto <jsonp@google.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
