[package]
name = "bumpkey"
version = "0.1.0"
authors = [
  "Brandon Weeks <bweeks@google.com",
  "Eric Chiang <ericchiang@google.com>",
  "Tom D'Netto <jsonp@google.com>",
]
edition = "2018"

[lib]
name = "bumpkey"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
openssl = { version = "0.10.29-1", optional = true }

[dev-dependencies]
serial_test = "0.5"

[build-dependencies]
bindgen = "0.59.1"